[tool.poetry]
name = "caracara"
version = "0.1.0"
description = ""
authors = ["Vadim Zifra"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^4.2.13"
django-environ = "^0.11.2"
djangorestframework = "^3.13.1"
django-two-factor-auth = {extras = ["phonenumberslite"], version = "^1.15.0"}
django-rest-durin = "^1.1.0"
django-extensions = "^3.2.1"
django-cryptography = "^1.1"
celery = "^5.4.0"
docker = "^7.0.0"
redis = "^4.5.1"
gunicorn = "^22.0.0"
psycopg = {extras = ["binary"], version = "^3.1.18"}

[tool.poetry.group.dev.dependencies]
pytest-django = "^4.5.2"
pre-commit = "^2.21.0"
pytest-factoryboy = "^2.5.1"
freezegun = "^1.2.2"
django-webtest = "^1.9.10"
ruff = "^0.3.7"

[tool.black]
line-length = 88
skip-string-normalization=true
experimental-string-processing = true
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | frontend
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
